# mirage

./: Makefile  choose_strategy.sh  mirage-runtime-riscv.opam  mirage-runtime.opam  mirage-types-lwt-riscv.opam  mirage-types-lwt.opam  mirage-types-riscv.opam  mirage.opam
compartment_allocations/asm_files/: mirage_info.s  mirage_runtime.s
compartment_allocations/default_cap_files/: mirage_info_cap_tee.ml  mirage_runtime_cap_tee.ml
compartment_allocations/strategy_1/: mirage_info_cap_tee.ml  mirage_runtime_cap_tee.ml
files/: dune.patch  mirage_types.patch  mirage_types_lwt.patch
lib/: mirage.ml  mirage_impl_console.ml
lib_runtime/: dune
