version: "3.5.0"
opam-version: "2.0"
maintainer:   "Sai Venkata Krishnan <saiganesha5.svkv@gmail.com>"
authors:      "The MirageOS team"
homepage:     "https://github.com/mirage/mirage"
bug-reports:  "https://github.com/mirage/mirage/issues/"
dev-repo:     "git+https://github.com/mirage/mirage.git"
license:      "ISC"
tags:         ["org:mirage" "org:xapi-project"]


build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-x" "riscv" "-p" "mirage-types-lwt" "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends:   [
  "ocaml" {>= "4.07.0"}
  "dune" {build & >= "1.1.0"}
  "ocaml-riscv"
  "lwt-riscv"
  "cstruct-riscv" {>="3.2.1"}
  "ipaddr-riscv" {>= "3.0.0"}
  "mirage-types-riscv" {>= "3.5.0"}
  "mirage-clock-lwt-riscv" {>= "2.0.0"}
  "mirage-time-lwt-riscv" {>= "1.1.0"}
  "mirage-flow-lwt-riscv" {>= "1.5.0"}
  "mirage-console-lwt-riscv" {>= "2.3.5"}
  "mirage-random-riscv" {>= "1.2.0"}
  "mirage-flow-lwt-riscv" {>= "1.5.0"}
  "mirage-protocols-lwt-riscv" {>= "2.0.0"}
  "mirage-stack-lwt-riscv" {>= "1.3.0"}
  "mirage-console-lwt-riscv" {>= "2.3.5"}
  "mirage-net-lwt-riscv" {>= "2.0.0"}
  "mirage-fs-lwt-riscv" {>= "2.0.0"}
  "mirage-channel-lwt-riscv" {>= "3.1.0"}
]


patches: ["dune.patch" "mirage_types.patch" "mirage_types_lwt.patch"]
extra-files:[
  [ "dune.patch" "md5=e87130a640c78e853fcd6b0ccfc387f5" ]
  [ "mirage_types_lwt.patch" "md5=a57ce91bd103b1af8c000c03e91cb7c5" ]
  [ "mirage_types.patch" "md5=f2d2a902e61c05350f4c39e4a6d5f62c" ]
]

synopsis: "Lwt module type definitions for MirageOS applications"
description: """
The purpose of this library is to provide concrete types
for several that are left abstract in `mirage-types`:

- `type 'a io = 'a Lwt.t`
- `type page_aligned_buffer = Io_page.t`
- `type buffer = Cstruct.t`
- `type macaddr = Macaddr.t`
- `type ipv4addr = Ipaddr.V4.t`
"""
