version: "3.5.0"
opam-version: "2.0"
maintainer: "Sai Venkata Krishnan <saiganesha5.svkv@gmail.com>"
authors:      ["Thomas Gazagnaire" "Anil Madhavapeddy" "Gabriel Radanne"
               "Mindy Preston" "Thomas Leonard" "Nicolas Ojeda Bar"
               "Dave Scott" "David Kaloper" "Hannes Mehnert" "Richard Mortier"]
homepage:     "https://github.com/mirage-shakti-iitm/mirage"
bug-reports:  "https://github.com/mirage-shakti-iitm/mirage/issues/"
dev-repo:     "git+https://github.com/mirage-shakti-iitm/mirage.git"
license:      "ISC"
tags:         ["org:mirage" "org:xapi-project"]


build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-x" "riscv" "-p" "mirage-types" "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.07.0"}
  "dune" {build & >= "1.1.0"}
  "ocaml-riscv"
  "mirage-device-riscv" {>= "1.1.0"}
  "mirage-time-riscv" {>= "1.1.0"}
  "mirage-clock-riscv" {>= "2.0.0"}
  "mirage-random-riscv" {>= "1.2.0"}
  "mirage-flow-riscv" {>= "1.5.0"}
  "mirage-console-riscv" {>= "2.3.5"}
  "mirage-protocols-riscv" {>= "2.0.0"}
  "mirage-stack-riscv" {>= "1.3.0"}
  "mirage-net-riscv" {>= "2.0.0"}
  "mirage-fs-riscv" {>= "2.0.0"}
  "mirage-channel-riscv" {>= "3.1.0"}
]

patches: ["dune.patch" "mirage_types.patch" "mirage_types_lwt.patch"]
extra-files:[
  [ "dune.patch" "md5=e87130a640c78e853fcd6b0ccfc387f5" ]
  [ "mirage_types_lwt.patch" "md5=a57ce91bd103b1af8c000c03e91cb7c5" ]
  [ "mirage_types.patch" "md5=f2d2a902e61c05350f4c39e4a6d5f62c" ]
]

synopsis: "Module type definitions for MirageOS applications"
description: """
Module type definitions for MirageOS applications
"""
